# E-Room

./: .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  README.md  TODO.md  certbot-init.sh  docker-compose.yml  e_room.db  livekit.yaml  nginx-ssl.conf  run.bat
backend/: .coverage  .dockerignore  .env.docker  .env.example  Dockerfile  RISK_MATRIX.md  TODO.md  alembic.ini  e_room.db  pyproject.toml
backend/admin/: database.py  main.py  patch_aioredis.py  routes.py  server.py  supabase_client.py
backend/admin/templates/: base.html  dashboard.html
backend/alembic/: env.py
backend/alembic/versions/: 7a41f215585b_add_pgvector_extension_and_vector_.py  9344b2bf093f_initial_all_eroom_tables.py
backend/app/: README_ARCHITECTURE.md  __init__.py  config.py  database.py  log.py  main.py  security.py  server.py
backend/app/agent/: __init__.py  base.py  corrector.py  create_node.py  expert.py  heartbeat.py  llm.py  prompt.py  query.py
backend/app/api/: __init__.py  dependencies.py
backend/app/infrastructure/: __init__.py  audio.py  audio_dictionary.py  audio_pipeline.py  audio_scorer.py  audio_wav2vec2.py  audio_whisper.py  celery_app.py  celery_bridge.py  crud.py  event_bus.py  livekit.py  livekit_service.py  minio.py  minio_client.py  phoneme_compare.py  redis_client.py  room_state.py  seed_data.py  tag_seed.py  token_store.py  video.py  websocket.py
backend/app/mcp/: __init__.py  rag_mcp.py  support_sheet_mcp.py  ticket_mcp.py  web_search_mcp.py
backend/app/model/: __init__.py  auth.py  common.py  conversation.py  document.py  message.py  moderation.py  notification.py  room.py  series.py  subscription.py  tag.py  user.py
backend/app/presentation/: __init__.py
backend/app/rag/: __init__.py  chunking.py  embedding.py  file_handle.py  retrieval.py  vector_store.py
backend/app/schemas/: __init__.py  agent.py  auth.py  common.py  conversation.py  message.py  room.py  series.py  subscription.py  tag.py  user.py
backend/app/seed/: seed_data.py  tag_seed.py
backend/app/service/: __init__.py  agent.py  auth.py  background_task.py  base.py  conversation.py  document.py  heartbeat.py  message.py  model_warmup.py  moderation.py  notification.py  room.py  room_state.py  series.py  subscription.py  tag.py  token_store.py  user.py
backend/app/tasks/: __init__.py  ai.py  tts.py
backend/migrations/: env.py
backend/scripts/: migrate_to_postgres.py
backend/tests/: conftest.py  test_edge_cases.py  test_infrastructure.py  test_minio.py  test_real_speech.py  test_redis.py  test_token_store.py  test_websocket.py
(+216 files in other folders)
