[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pham Huy Hoang", email = "23e1020002@hueuni.edu.vn" }
]
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "uvicorn>=0.46.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
