[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pham Huy Hoang", email = "23e1020002@hueuni.edu.vn" }
]
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "celery>=5.6.3",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "minio>=7.2.20",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "pymysql>=1.1.1",
    "cryptography>=44.0.0",
    "redis>=7.4.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
    "alembic>=1.18.4",
    "pgvector>=0.4.2",
    "sqlalchemy>=2.0.49",
]

[project.scripts]
backend = "backend:main"

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
