[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pham Huy Hoang", email = "23e1020002@hueuni.edu.vn" }
]
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "celery>=5.6.3",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "minio>=7.2.20",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "pymysql>=1.1.1",
    "cryptography>=44.0.0",
    "redis>=7.4.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
    "alembic>=1.18.4",
    "pgvector>=0.4.2",
    "sqlalchemy>=2.0.49",
    "langchain>=1.2.2",
    "langchain-openai>=1.1.7",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "langgraph-prebuilt>=1.0.5",
    "langchain-nomic>=1.0.1",
    "nomic>=3.9.0",
    "tidb-vector>=0.0.15",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
]

[project.scripts]
backend = "backend:main"

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
